add sections for expression autocomplete. Filter variables by current project if set

--- a/packages/frontend/editor-ui/src/styles/plugins/_codemirror.scss
+++ b/packages/frontend/editor-ui/src/styles/plugins/_codemirror.scss
@@ -60,6 +60,11 @@
 			gap: var(--spacing-2xs);
 			scroll-padding: 40px;
 			scroll-margin: 40px;
+
+			&.strikethrough {
+				text-decoration: line-through;
+				color: var(--color-text-light);
+			}
 		}
 
 		li .cm-completionLabel {
