update primary color

--- a/packages/frontend/@n8n/design-system/src/css/_tokens.scss
+++ b/packages/frontend/@n8n/design-system/src/css/_tokens.scss
@@ -3,7 +3,7 @@
 @mixin theme {
 	--color-primary-h: var(--p--color--primary-h);
 	--color-primary-s: var(--p--color--primary-s);
-	--color-primary-l: 68%;
+	--color-primary-l: var(--p--color--primary-l);
 
 	// Primary tokens
 
