--- a/packages/frontend/@n8n/design-system/src/css/_tokens.scss
+++ b/packages/frontend/@n8n/design-system/src/css/_tokens.scss
@@ -43,6 +43,7 @@
 	--color-danger-tint-2: var(--p--color--alt-c-030);
 
 	// Diff colors
+	--test-color: 1;
 	--diff-new: #0eab54;
 	--diff-new-light: #b4efc4;
 	--diff-new-faint: #ddfbe7;
