--- a/packages/frontend/@n8n/design-system/src/css/_tokens.scss
+++ b/packages/frontend/@n8n/design-system/src/css/_tokens.scss
@@ -43,7 +43,7 @@
 	--color-danger-tint-2: var(--p--color--alt-c-030);
 
 	// Diff colors
-	--diff-new: #0eab54;
+	--diff-new: #0ea;
 	--diff-new-light: #b4efc4;
 	--diff-new-faint: #ddfbe7;
 	--diff-modified: #bf941f;
