fix missing tokens

--- a/packages/frontend/@n8n/design-system/src/css/_tokens.dark.scss
+++ b/packages/frontend/@n8n/design-system/src/css/_tokens.dark.scss
@@ -225,7 +225,7 @@
 	--color-button-highlight-font: var(--p--color--gray-320);
 	--color-button-highlight-border: transparent;
 	--color-button-highlight-background: transparent;
-	--color-button-highlight-hover-active-focus-font: var(--p--color--primary-tint-100);
+	--color-button-highlight-hover-active-focus-font: var(--p--color--primary-420);
 	--color-button-highlight-hover-active-focus-border: var(--p--color--gray-670);
 	--color-button-highlight-hover-background: var(--p--color--gray-670);
 	--color-button-highlight-active-focus-background: var(--p--color--gray-670);
