address feedback, add tests

--- a/packages/frontend/@n8n/design-system/src/css/_tokens.dark.scss
+++ b/packages/frontend/@n8n/design-system/src/css/_tokens.dark.scss
@@ -230,7 +230,7 @@
 	--color-button-highlight-hover-background: var(--p--color--gray-670);
 	--color-button-highlight-active-focus-background: var(--p--color--gray-670);
 	--color-button-highlight-focus-outline: var(--p--color--gray-670);
-	--color-button-highlight-disabled-font: var(--p--color--gray-0-a-010);
+	--color-button-highlight-disabled-font: var(--p--color--white-a-010);
 	--color-button-highlight-disabled-border: transparent;
 
 	// Button success, warning, danger
