--- a/packages/frontend/@n8n/design-system/src/css/_tokens.scss
+++ b/packages/frontend/@n8n/design-system/src/css/_tokens.scss
@@ -1,80 +1,69 @@
 @use 'sass:math';
 
 @mixin theme {
-	--color-primary-h: var(--p--color--primary-h);
-	--color-primary-s: var(--p--color--primary-s);
-	--color-primary-l: var(--p--color--primary-l);
+	--color--primary-h: var(--p--color--primary-h);
+	--color--primary-s: var(--p--color--primary-s);
+	--color--primary-l: var(--p--color--primary-l);
 
 	// Primary tokens
 
 	// Primary
-	--color-primary-shade-1: var(--p--color--primary-420);
-	--color-primary: var(--p--color--primary-320);
-	--color-primary-tint-1: var(--p--color--primary-120);
-	--color-primary-tint-2: var(--p--color--primary-070);
-	--color-primary-tint-3: var(--p--color--primary-030);
+	--color--primary--shade-1: var(--p--color--primary-420);
+	--color--primary: var(--p--color--primary-320);
+	--color--primary--tint-1: var(--p--color--primary-120);
+	--color--primary--tint-2: var(--p--color--primary-070);
+	--color--primary--tint-3: var(--p--color--primary-030);
 
 	// Secondary
-	--color-secondary-shade-1: var(--p--color--secondary-570);
-	--color-secondary: var(--p--color--secondary-470);
-	--color-secondary-tint-1: var(--p--color--secondary-170);
-	--color-secondary-tint-3: var(--p--color--secondary-070);
+	--color--secondary--shade-1: var(--p--color--secondary-570);
+	--color--secondary: var(--p--color--secondary-470);
+	--color--secondary--tint-1: var(--p--color--secondary-170);
+	--color--secondary--tint-3: var(--p--color--secondary-070);
 
 	// Success
-	--color-success-shade-1: var(--p--color--alt-a-700);
-	--color-success: var(--p--color--alt-a-600);
-	--color-success-light: var(--p--color--alt-a-300);
-	--color-success-light-2: var(--p--color--alt-a-200);
-	--color-success-tint-1: var(--p--color--alt-a-100);
-	--color-success-tint-2: var(--p--color--alt-a-050);
+	--color--success--shade-1: var(--p--color--alt-a-700);
+	--color--success: var(--p--color--alt-a-600);
+	--color--success--light: var(--p--color--alt-a-300);
+	--color--success--light-2: var(--p--color--alt-a-200);
+	--color--success--tint-1: var(--p--color--alt-a-100);
+	--color--success--tint-2: var(--p--color--alt-a-050);
 
 	// Warning
-	--color-warning-shade-1: var(--p--color--alt-b-530);
-	--color-warning: var(--p--color--alt-b-430);
-	--color-warning-tint-1: var(--p--color--alt-b-180);
-	--color-warning-tint-2: var(--p--color--alt-b-030);
+	--color--warning--shade-1: var(--p--color--alt-b-530);
+	--color--warning: var(--p--color--alt-b-430);
+	--color--warning--tint-1: var(--p--color--alt-b-180);
+	--color--warning--tint-2: var(--p--color--alt-b-030);
 
 	// Danger
-	--color-danger-shade-1: var(--p--color--alt-c-580);
-	--color-danger: var(--p--color--alt-c-480);
-	--color-danger-light: var(--p--color--alt-c-330);
-	--color-danger-light-2: var(--p--color--alt-c-230);
-	--color-danger-tint-1: var(--p--color--alt-c-080);
-	--color-danger-tint-2: var(--p--color--alt-c-030);
-
-	// Diff colors
-	--diff-new: #0eab54;
-	--diff-new-light: #b4efc4;
-	--diff-new-faint: #ddfbe7;
-	--diff-modified: #bf941f;
-	--diff-modified-light: #f3dca1;
-	--diff-modified-faint: #fbf1d4;
-	--diff-del: #f51f32;
-	--diff-del-light: #fad3d0;
-	--diff-del-faint: #ffedec;
+	--color--danger--shade-1: var(--p--color--alt-c-580);
+	--color--danger: var(--p--color--alt-c-480);
+	--color--danger--light: var(--p--color--alt-c-330);
+	--color--danger--light-2: var(--p--color--alt-c-230);
+	--color--danger--tint-1: var(--p--color--alt-c-080);
+	--color--danger--tint-2: var(--p--color--alt-c-030);
 
 	// Text
-	--color-text-dark: var(--p--color--gray-740);
-	--color-text-base: var(--p--color--gray-540);
-	--color-text-light: var(--p--color--gray-420);
-	--color-text-lighter: var(--p--color--gray-120);
-	--color-text-xlight: var(--p--color--white);
-	--color-text-danger: var(--p--color--alt-c-480);
+	--color--text--dark: var(--p--color--gray-740);
+	--color--text--base: var(--p--color--gray-540);
+	--color--text--light: var(--p--color--gray-420);
+	--color--text--lighter: var(--p--color--gray-120);
+	--color--text--xlight: var(--p--color--white);
+	--color--text--danger: var(--p--color--alt-c-480);
 
 	// Foreground
-	--color-foreground-xdark: var(--p--color--gray-490);
-	--color-foreground-dark: var(--p--color--gray-200);
-	--color-foreground-base: var(--p--color--gray-120);
-	--color-foreground-light: var(--p--color--gray-070);
-	--color-foreground-xlight: var(--p--color--white);
+	--color--foreground--xdark: var(--p--color--gray-490);
+	--color--foreground--dark: var(--p--color--gray-200);
+	--color--foreground--base: var(--p--color--gray-120);
+	--color--foreground--light: var(--p--color--gray-070);
+	--color--foreground--xlight: var(--p--color--white);
 
 	// Background
-	--color-background-dark: var(--p--color--gray-820);
-	--color-background-medium: var(--p--color--gray-120);
-	--color-background-base: var(--p--color--gray-040);
-	--color-background-light-base: var(--p--color--gray-025);
-	--color-background-light: var(--p--color--gray-010);
-	--color-background-xlight: var(--p--color--white);
+	--color--background--dark: var(--p--color--gray-820);
+	--color--background--medium: var(--p--color--gray-120);
+	--color--background--base: var(--p--color--gray-040);
+	--color--background--light-base: var(--p--color--gray-025);
+	--color--background--light: var(--p--color--gray-010);
+	--color--background--xlight: var(--p--color--white);
 
 	// Secondary tokens
 
@@ -587,6 +576,17 @@
 		var(--node-type-ai_vectorStore-color-s),
 		var(--node-type-background-l)
 	);
+
+	// Diff colors
+	--diff-new: #0eab54;
+	--diff-new-light: #b4efc4;
+	--diff-new-faint: #ddfbe7;
+	--diff-modified: #bf941f;
+	--diff-modified-light: #f3dca1;
+	--diff-modified-faint: #fbf1d4;
+	--diff-del: #f51f32;
+	--diff-del-light: #fad3d0;
+	--diff-del-faint: #ffedec;
 
 	// Various
 	--color-avatar-accent-1: var(--p--color--gray-120);
