fix unknown color, add back deprecated colors

--- a/packages/frontend/editor-ui/src/n8n-theme-variables.scss
+++ b/packages/frontend/editor-ui/src/n8n-theme-variables.scss
@@ -17,18 +17,7 @@ $custom-expression-background: var(--color--background--light);
 $badge-danger-color: var(--color--danger);
 $badge-danger-background-color: var(--color--primary--tint-3);
 $badge-danger-border-color: var(--color--primary--tint-2);
-$badge-warning-background-color: hsla(
-	var(--color-warning-h),
-	var(--color-warning-s),
-	var(--color-warning-l),
-	0.3
-);
-$badge-warning-color: hsla(
-	var(--color-warning-h),
-	var(--color-warning-s),
-	var(--color-warning-l),
-	0.3
-);
+$badge-warning-background-color: var(--color--warning--tint-2);
 $badge-warning-color: var(--color--text--dark);
 
 // Warning tooltip
