--- a/packages/frontend/@n8n/design-system/src/css/index.scss
+++ b/packages/frontend/@n8n/design-system/src/css/index.scss
@@ -1,5 +1,5 @@
 @use './primitives.scss';
-@use './tokens.deprecated.scss';
+@use './tokens.deprecated.scss' as deprecated;
 @use './tokens.scss';
 @use './tokens.dark.deprecated.scss' as darkDeprecated;
 @use './tokens.dark.scss' as dark;
