--- a/packages/frontend/@n8n/design-system/src/css/_tokens.dark.scss
+++ b/packages/frontend/@n8n/design-system/src/css/_tokens.dark.scss
@@ -527,6 +527,9 @@
 
 	/* Ag Grid */
 	--grid-row-selected-background: var(--p-color-secondary-720);
+
+	--color-command-bar-item-hover-background: var(--color-background-light-base);
+	--shadow-command-bar: 0 15px 45px 0 hsla(0, 0%, 0%, 0.25), 0 5px 10px 0 hsla(0, 0%, 0%, 0.15);
 }
 
 body[data-theme='dark'] {
