--- a/packages/frontend/@n8n/design-system/src/css/_tokens.scss
+++ b/packages/frontend/@n8n/design-system/src/css/_tokens.scss
@@ -699,6 +699,9 @@
 	/* Ag Grid */
 	--grid-row-selected-background: var(--p-color-secondary-070);
 	--grid-cell-editing-border: 2px solid var(--color-secondary);
+
+	--color-command-bar-item-hover-background: var(--color-background-base);
+	--shadow-command-bar: 0 15px 45px 0 hsla(0, 0%, 0%, 0.13), 0 5px 10px 0 hsla(0, 0%, 0%, 0.08);
 }
 
 :root {
