update design system issues

--- a/packages/frontend/@n8n/design-system/src/css/utilities/_spacing.scss
+++ b/packages/frontend/@n8n/design-system/src/css/utilities/_spacing.scss
@@ -8,11 +8,13 @@ $spacing-sides: 'top', 'right', 'bottom', 'left';
 	@each $property in $spacing-properties {
 		@each $side in $spacing-sides {
 			.#{string.slice($property, 0, 1)}#{string.slice($side, 0, 1)}-#{$size} {
+				/* stylelint-disable-next-line @n8n/css-var-naming */
 				#{$property}-#{$side}: var(--spacing--#{$size}) !important;
 			}
 		}
 
 		.#{string.slice($property, 0, 1)}-#{$size} {
+			/* stylelint-disable-next-line @n8n/css-var-naming */
 			#{$property}: var(--spacing--#{$size}) !important;
 		}
 	}
